--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <ul class="nav child_menu">
                       <li><a href="membros_criar.html">Criar</a></li>
                       <li><a href="membros_atualizar.html">Atualizar</a></li>
-                      <li><a href="membros_editar.html">Editar</a></li>
+                      <li><a href="membros_editar.html">Excluir</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-desktop"></i> Finanças <span class="fa fa-chevron-down"></span></a>
