--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                       <li><a href="membros_criar.html">Criar</a></li>
                       <li><a href="membros_atualizar.html">Atualizar</a></li>
                       <li><a href="membros_editar.html">Excluir</a></li>
+                      <li><a href="membros_consultar.html">Consultar</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-desktop"></i> Finanças <span class="fa fa-chevron-down"></span></a>
