--- a/membros_atualizar.html
+++ b/membros_atualizar.html
@@ -68,7 +68,7 @@
                     <ul class="nav child_menu">
                       <li><a href="membros_criar.html">Criar</a></li>
                       <li><a href="membros_atualizar.html">Atualizar</a></li>
-                      <li><a href="membros_excluir.html">Excluir</a></li>
+                      <li><a href="membros_editar.html">Excluir</a></li>
                       <li><a href="membros_consultar.html">Consultar</a></li>
 
                     </ul>
